<resources>
    <string name="app_name">FastCalc</string>

    <string name="button_0">0</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>

    <string name="button_comma">,</string>
    <string name="button_clear">C</string>

    <string name="button_plus">+</string>
    <string name="button_minus">-</string>
    <string name="button_divide">/</string>
    <string name="button_multiple">*</string>

    <string name="text_view_equal">=</string>

    <string name="num_dialog_title">Full number</string>
    <string name="num_dialog_button_copy">Copy to clipboard</string>
    <string name="num_dialog_toast_copy">copied to clipboard</string>
    <string name="toast_max_integer_length">integer numbers is max length!</string>
    <string name="toast_max_decimal_length">decimal numbers is max length!</string>
</resources>
