<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryBackground"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="72sp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/textViewFirst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryActive"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/textViewOperation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryActive"
            android:textSize="36sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/textViewSecond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryActive"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/textViewEqual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_equal"
            android:textColor="@color/colorPrimaryActive"
            android:textSize="36sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/textViewResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryActive"
            android:textSize="36sp" />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="*">

        <TableRow
            style="?android:attr/buttonBarStyle"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/button_1"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorPrimaryActive"
                android:textSize="36sp" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/button_2"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorPrimaryActive"
                android:textSize="36sp" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/button_3"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorPrimaryActive"
                android:textSize="36sp" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/buttonPlus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/button_plus"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/colorPrimaryActive"
                android:textSize="36sp" />
        </TableRow>

        <TableRow
            style="?android:attr/buttonBarStyle"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/button_4"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorPrimaryActive"
                android:textSize="36sp" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/button_5"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorPrimaryActive"
                android:textSize="36sp" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/button_6"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorPrimaryActive"
                android:textSize="36sp" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/buttonMinus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/button_minus"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/colorPrimaryActive"
                android:textSize="36sp" />
        </TableRow>

        <TableRow
            style="?android:attr/buttonBarStyle"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/button_7"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorPrimaryActive"
                android:textSize="36sp" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/button_8"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorPrimaryActive"
                android:textSize="36sp" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/button_9"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorPrimaryActive"
                android:textSize="36sp" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/buttonMultiply"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/button_multiple"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/colorPrimaryActive"
                android:textSize="36sp" />
        </TableRow>

        <TableRow
            style="?android:attr/buttonBarStyle"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/buttonComma"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/button_comma"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorPrimaryActive"
                android:textSize="36sp" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/button0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/button_0"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorPrimaryActive"
                android:textSize="36sp" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/buttonClear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/button_clear"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorPrimaryActive"
                android:textSize="36sp" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/buttonDivide"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/button_divide"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/colorPrimaryActive"
                android:textSize="36sp" />
        </TableRow>
    </TableLayout>
</LinearLayout>